--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation 'com.astuetz:pagerslidingtabstrip:1.0.1'
     implementation files('libs/android-zoom-view.jar')
+    implementation 'me.immortalz:transitionhelper:2.3.4'
 }
