--- a/build.gradle
+++ b/build.gradle
@@ -8,10 +8,12 @@ buildscript {
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.1.3'
-        
+
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        classpath 'com.google.gms:google-services:4.0.1'
+
     }
 }
 
@@ -19,9 +21,17 @@ allprojects {
     repositories {
         google()
         jcenter()
+        mavenCentral()
+        maven { url 'http://devrepo.kakao.com:8088/nexus/content/groups/public/'}
     }
+
 }
 
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+
+
+
+
