--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".KakaoLoginApplication"
+        android:name=".app.BreakSecretary"
         android:theme="@style/AppTheme">
 
         <meta-data
@@ -27,9 +27,6 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".MainActivity" >
-        </activity>
-
         <activity android:name=".LoginActivity"
             android:windowSoftInputMode="adjustPan">
 
@@ -38,7 +35,9 @@
         <activity android:name=".SignUpActivity"
             android:windowSoftInputMode="adjustPan">
         </activity>
+        <activity android:name=".activity.MainActivity"></activity>
         <activity android:name=".activity.ShowingMapActivity"></activity>
+
     </application>
 
 </manifest>
