--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,6 +6,8 @@
     <uses-permission android:name="android.permission.GET_ACCOUNTS" />
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
+    <uses-permission android:name="android.permission.INTERNET" />
+
 
     <application
         android:allowBackup="true"
@@ -18,25 +20,36 @@
 
         <meta-data
             android:name="com.kakao.sdk.AppKey"
-            android:value="1463eadc190f1e30648a9625850b9b41"/>
+            android:value="@string/kakao_app_key" />
 
-        <activity android:name=".FirstActivity">
+        <activity android:name=".activity.FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <activity android:name=".LoginActivity"
+        <activity android:name=".activity.LoginActivity"
             android:windowSoftInputMode="adjustPan">
 
         </activity>
 
-        <activity android:name=".SignUpActivity"
+        <activity android:name=".activity.SignUpActivity"
             android:windowSoftInputMode="adjustPan">
         </activity>
         <activity android:name=".activity.MainActivity"></activity>
         <activity android:name=".activity.ShowingMapActivity"></activity>
+
+        <activity
+            android:name="com.kakao.auth.authorization.authcode.KakaoWebViewActivity"
+            android:launchMode="singleTop"
+            android:windowSoftInputMode="adjustResize">
+
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN"/>
+                <category android:name="android.intent.category.DEFAULT"/>
+            </intent-filter>
+        </activity>
 
     </application>
 
