--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,6 +16,10 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+//    dataBinding {
+//        enabled = true
+//    }
+
     buildToolsVersion '27.0.3'
 }
 
@@ -26,6 +30,7 @@ dependencies {
     implementation 'com.android.support:design:27.1.1'
 
     implementation 'com.android.support.constraint:constraint-layout:1.1.2'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -33,11 +38,12 @@ dependencies {
 
     implementation 'com.google.firebase:firebase-auth:16.0.3'
     implementation 'com.google.firebase:firebase-core:16.0.3'
+    implementation 'com.google.firebase:firebase-database:16.0.1'
     implementation 'com.google.android.gms:play-services-auth:16.0.0'
 
-    implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.13.0'
-    implementation 'com.android.volley:volley:1.0.0'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+//    implementation group: 'com.kakao.sdk', name: 'usermgmt', version: '1.13.0'
+//    implementation 'com.android.volley:volley:1.0.0'
+//    implementation 'com.github.bumptech.glide:glide:3.7.0'
 
     implementation 'com.astuetz:pagerslidingtabstrip:1.0.1'
     implementation files('libs/android-zoom-view.jar')
