--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,49 +8,44 @@
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.INTERNET" />
 
-
     <application
+        android:name=".app.BreakSecretary"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:name=".app.BreakSecretary"
         android:theme="@style/AppTheme">
-
-        <meta-data
-            android:name="com.kakao.sdk.AppKey"
-            android:value="@string/kakao_app_key" />
+        <!--<meta-data-->
+            <!--android:name="com.kakao.sdk.AppKey"-->
+            <!--android:value="@string/kakao_app_key" />-->
 
         <activity android:name=".activity.FirstActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-        <activity android:name=".activity.LoginActivity"
-            android:windowSoftInputMode="adjustPan">
-
-        </activity>
-
-        <activity android:name=".activity.SignUpActivity"
-            android:windowSoftInputMode="adjustPan">
-        </activity>
-        <activity android:name=".activity.MainActivity"></activity>
-        <activity android:name=".activity.ShowingMapActivity"></activity>
-
         <activity
-            android:name="com.kakao.auth.authorization.authcode.KakaoWebViewActivity"
-            android:launchMode="singleTop"
-            android:windowSoftInputMode="adjustResize">
+            android:name=".activity.LoginActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity
+            android:name=".activity.SignUpActivity"
+            android:windowSoftInputMode="adjustPan"></activity>
+        <activity android:name=".activity.MainActivity" />
+        <activity android:name=".activity.ShowingMapActivity" />
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
-                <category android:name="android.intent.category.DEFAULT"/>
-            </intent-filter>
-        </activity>
-
+        <!--<activity-->
+            <!--android:name="com.kakao.auth.authorization.authcode.KakaoWebViewActivity"-->
+            <!--android:launchMode="singleTop"-->
+            <!--android:windowSoftInputMode="adjustResize">-->
+            <!--<intent-filter>-->
+                <!--<action android:name="android.intent.action.MAIN" />-->
+                <!--<category android:name="android.intent.category.DEFAULT" />-->
+            <!--</intent-filter>-->
+        <!--</activity>-->
+        <!--<activity android:name=".activity.KakaoLoginActivity"></activity>-->
     </application>
 
 </manifest>
