--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     implementation 'com.astuetz:pagerslidingtabstrip:1.0.1'
     implementation files('libs/android-zoom-view.jar')
     implementation 'me.immortalz:transitionhelper:2.3.4'
+    implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
 
 }
 
