--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,26 +15,35 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme">
+        android:theme="@style/AppTheme.NoActionBar">
         <!--<meta-data-->
             <!--android:name="com.kakao.sdk.AppKey"-->
             <!--android:value="@string/kakao_app_key" />-->
 
-        <activity android:name=".activity.FirstActivity">
+        <activity android:name=".activity.FirstActivity"
+            android:theme="@style/AppTheme.NoActionBar_StatusBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".activity.LoginActivity"
-            android:windowSoftInputMode="adjustPan"></activity>
+            android:theme="@style/AppTheme.NoActionBar_StatusBar"
+            android:windowSoftInputMode="adjustPan">
+
+        </activity>
         <activity
             android:name=".activity.SignUpActivity"
-            android:windowSoftInputMode="adjustPan"></activity>
-        <activity android:name=".activity.MainActivity" />
-        <activity android:name=".activity.ShowingMapActivity" />
+            android:theme="@style/AppTheme.NoActionBar_StatusBar"
+            android:windowSoftInputMode="adjustPan">
+
+        </activity>
+
+
+        <activity android:name=".activity.MainActivity">
+
+        </activity>
 
         <!--<activity-->
             <!--android:name="com.kakao.auth.authorization.authcode.KakaoWebViewActivity"-->
