--- a/app/build.gradle
+++ b/app/build.gradle
@@ -40,6 +40,10 @@ dependencies {
     implementation files('libs/android-zoom-view.jar')
     implementation 'me.immortalz:transitionhelper:2.3.4'
     implementation 'com.ogaclejapan.smarttablayout:library:1.6.1@aar'
+    implementation 'org.altbeacon:android-beacon-library:2+'
+    implementation 'com.mikhaellopez:circularimageview:3.2.0'
+    //implementation 'com.github.Adilhusen:circle-progress-ad-android-:1.0'
+    implementation 'com.dinuscxj:circleprogressbar:1.3.0'
 }
 
 apply plugin: 'com.google.gms.google-services'
