--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,6 +44,8 @@ dependencies {
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
     //implementation 'com.github.Adilhusen:circle-progress-ad-android-:1.0'
     implementation 'com.dinuscxj:circleprogressbar:1.3.0'
+    implementation 'com.github.bumptech.glide:glide:4.7.1'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.7.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
